# tesol_ws

./: .gitignore  .gitmodules  README.md  optimized_camera_params.yaml  sony_cam2_info.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
data/Calib/: camParamGen.py  reCal.py  recal.py
data/TESolution/: Exp1_10s_2024-11-19_20-34-56.csv  Exp1_10s_2024-11-19_20-48-32.csv  Exp1_10s_2024-11-19_20-49-49.csv  Exp1_10s_2024-11-19_20-50-57.csv  Exp1_10s_2024-11-19_20-51-25.csv  Exp1_10s_2024-11-19_21-51-23.csv  Exp1_10s_2024-11-19_23-18-56.csv
data/TESolution/CAM12_120/: Sweep_1_30Hz_120s_2024-11-20_00-46-59.csv  Sweep_1_30Hz_120s_2024-11-20_00-50-00.csv  analysis_updated.py
data/TESolution/Sweep1_30/: Cam3_1202_10s_2024-11-19_23-32-53.csv
data/TESolution/Sweep_cam123/: analysis_shaking_three_cam.py  sweep123_120s_2024-11-20_02-13-43.csv
data/TESolution/cam123/: Sine_1Hz_20s_2024-11-20_02-09-42.csv
data/TESolution/cam1_120Sweep/: Sweep_1_30Hz_120s_2024-11-20_01-40-19.csv  analysis_updated.py
data/analysis/shaking table - ldv experiment/: analysis_shaking.py  analysis_shaking_single_cam.py  analysis_shaking_two_cam.py  data_Exp1_10s_2024-08-29_01-40-21.csv  protocol_optoNCDT-ILD1420_2024-08-29_01-40-21.309.csv  protocol_optoNCDT-ILD1420_2024-09-13_00-09-35.146.csv  test.py
data/calibration_20240828_140440/: calibration.yaml
data/cam2/calibration_20240829_034632/: calibration.yaml
data/charuco_calibration_cam1_600mm/calibration_20240826_143517/: calibration.yaml
data/charuco_calibration_data_cam3_400mm/: calibration.yaml
data/icons/: GUI.desktop  ROS.desktop
data/kalib/: calib3.yaml  calibration.yaml
data/new_temp/: gatimages.py  get_camera_info.py  refined_camera_params.yaml
data/new_temp/newii/: calibration copy.yaml  calibration.yaml  pp.py  refined_calibration.yaml
data/pose_data/: data_Exp1_10s_2024-08-13_07-01-01.csv  data_Exp1_10s_2024-08-13_07-01-55.csv  data_Exp1_10s_2024-08-13_07-06-25.csv  data_Exp1_10s_2024-08-13_07-07-50.csv  data_Exp1_10s_2024-08-13_07-08-23.csv  data_Exp1_10s_2024-08-13_07-09-25.csv  data_Exp1_10s_2024-08-14_21-37-26.csv  data_Exp1_10s_2024-08-14_22-01-29.csv  data_Exp1_10s_2024-08-17_21-36-35.csv
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  (+2 more)
gui/: demoTesting.py  gazebo_gui.py  gui.py  gui_backup.py
gui/data/: record_comp.py
src/gazebo_sim/: CMakeLists.txt  README.md  package.xml
src/gazebo_sim/launch/: shaking_table_gui.launch
src/gazebo_sim/model/: shaking_table.sdf
src/gazebo_sim/models/building/: model.config  model.sdf
src/gazebo_sim/models/building/meshes/: shear_building.stl
src/gazebo_sim/models/shaking_table/: model.config  model.sdf
src/gazebo_sim/models/shear_building/: model.config  model.sdf
src/gazebo_sim/plugins/: CMakeLists.txt  building_plugin.cpp  shaking_plugin.cpp
src/gazebo_sim/scripts/: shaking_gui.py
src/gazebo_sim/worlds/: shaking_table.world  test_plugin.world
src/gsim_urdf_pkg/: CMakeLists.txt  package.xml
src/gsim_urdf_pkg/config/: camera.yaml  joint_names_gsim_urdf_pkg.yaml
src/gsim_urdf_pkg/launch/: display.launch  gazebo.launch  spawn_model.launch  visualize_model.launch
src/gsim_urdf_pkg/meshes/: base_link.STL  fifth_link.STL  first_link.STL  fourth_link.STL  second_link.STL  third_link.STL
src/gsim_urdf_pkg/rviz/: gsim_urdf_pkg.rviz
src/gsim_urdf_pkg/src/plugins/: shaking_table_plugin.cpp
src/gsim_urdf_pkg/urdf/: gsim_urdf_pkg.csv  gsim_urdf_pkg.urdf
src/my_gazebo_model/: CMakeLists.txt
src/sony_cam/: CMakeLists.txt  package.xml
src/sony_cam/config/: camera_info.yaml  sony_cam1_info.yaml  sony_cam1_info_24mmyaml  sony_cam1_info_600mm_1280x720.yaml  sony_cam1_info_600mm_1920x1080.yaml  sony_cam1_info_600mm_640x480.yaml  sony_cam1_info_600mm_648x480.yaml  sony_cam2_info.yaml  sony_cam3_info.yaml  sony_cam3_info_600mm_640x480.yaml
src/sony_cam/launch/: calib.launch  cam.launch  fake_cam.launch  use_cam.launch  use_cam_backup_launch  use_viewcam.launch  viewcam.launch
src/sony_cam/node/: fake_camera_node.py  sony_cam.cpp
src/sony_cam/testing/: cam_.py  resolution.py
src/tesol_detect/: CMakeLists.txt
src/tesol_detect/launch/: aruco_detect.launch  tesol.launch  tesol_april.launch  use_aruco_detect.launch  use_tesol_april.launch
src/tesol_detect/launch/aruco/: tesol.launch  use_tesol.launch
src/tesol_detect/scripts/: acam2.py  april.py  april_marker.py  aruco_det.py  aruco_det_kalman_py  cam1.py  cam2.py  cam3.py  cam3_backuppy  eacl.py  finDetect.py  tesol_aruco.py  tesol_aruco_cam.py  testing.py  try_opse.py
src/tesol_detect/scripts/backup/: acam2.py  april.py  aprilcam.py  aruco_det.py  aruco_detector.py  cam2.py  cam3.py  detect_.py  tesol_aruco accom_py  tesol_aruco.py
(+786 files in other folders)
