<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim</name>
  <version>0.0.0</version>
  <description>The gazebo_sim package</description>
  <maintainer email="ammar@todo.todo">ammar</maintainer>
  <license>TODO</license>\<depend>roscpp</depend>
  <depend>std_msgs</depend>
  <build_depend>gazebo</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
