<?xml version="1.0"?>
<package format="2">
  <name>sony_cam</name>
  <version>0.0.0</version>
  <description>The sony_cam package</description>
  <maintainer email="ammarajmal@cau.ac.kr">Ammar Ajmal</maintainer>
  <license>BSD</license>
  <url type="Github">http://github.com/ammarajmal/row_ws</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>opencv</depend>
</package>


